tests/data/externalname-services/externalname-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: externalnginx.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: externalname-service
            port:
              number: 80
