tests/data/externalname-services/externalname-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: externalname-service
spec:
  type: ExternalName
  externalName: nginx.com
