tests/data/externalname-services/nginx-config.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: nginx-config
data:
  resolver-addresses: "kube-dns.kube-system.svc.cluster.local"
